# MultiButton

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  README_CN.md  button.c  button.h  multi_button.c  multi_button.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-buildscript.sh
.tmp/: multi_button copy.h  multi_button_config.h  new_example.c
examples/: SimpleMultiButton.c  advanced_example.c  basic_example.c  event_callback.c  event_inquire.c  example_callback.c  example_poll.c  poll_example.c
include/: multi_button.h  multi_button_cfg.h
src/: multi_button.c
tests/: test_button.c
